cluster/apps/default/firefly/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii
spec:
  template:
    spec:
      containers:
      - name: firefly-iii
        ports:
          - name: http
            # Override port from 80 to 8080
            containerPort: 8080
            protocol: TCP
