cluster/apps/default/firefly/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii
  namespace: default
  labels:
    app.kubernetes.io/instance: firefly-iii
    app.kubernetes.io/name: firefly-iii
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: firefly-iii
      app.kubernetes.io/name: firefly-iii
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: firefly-iii
        app.kubernetes.io/name: firefly-iii
    spec:
      containers:
      - name: firefly-iii
        image: fireflyiii/core:version-5.6.9
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: firefly-iii
        volumeMounts:
        - mountPath: "/var/www/html/firefly-iii/storage/upload"
          name: firefly-iii-data
        resources:
          requests:
            cpu: 50m
            memory: 512Mi
          limits:
            cpu: 900m
            memory: 1Gi
      volumes:
        - name: firefly-iii-data
          persistentVolumeClaim:
            claimName: firefly-iii-data
